[gd_scene load_steps=2 format=3 uid="uid://bvulpmb37qoob"]

[ext_resource type="Script" uid="uid://chcs5wkw48bkc" path="res://scenes/arena_fights_completed/arena_fights_completed.gd" id="1_s6yft"]

[node name="ArenaFightsCompleted" type="Control" groups=["ArenaFightsCompleted"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6yft")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -20.0
offset_right = 88.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You completed 0 fights"
horizontal_alignment = 1

[node name="TotalTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total fight time 0"
horizontal_alignment = 1

[node name="TotalKillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total kills 0"
horizontal_alignment = 1

[node name="TotalDamageGivenLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total damage taken 0"
horizontal_alignment = 1

[node name="TotalDamageTakenLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total damage given 0"
horizontal_alignment = 1

[node name="TotalArenasLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total arenas 0"
horizontal_alignment = 1

[node name="ResultsLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="TotalExperience" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total experience 0"
horizontal_alignment = 1

[node name="TotalGold" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total gold 0"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"
